<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybase"
    android:id="@+id/requestPage">

    <TextView
        android:id="@+id/requestTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/requestPageTitle"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/companyInp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/requestTitle"
        android:layout_marginTop="-1dp"
        android:gravity="center"
        android:background="@drawable/popup_round_sunny"
        android:hint="@string/companyName"
        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_below="@id/companyInp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/popup_round_sunny">


        <EditText
            android:id="@+id/detailsInp"
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:layout_marginTop="8dp"
            android:hint="@string/RequestPrompt"
            android:scrollbars="vertical" />

    </ScrollView>

    <CheckBox
        android:id="@+id/usePersonalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/personalDataCheckBox"
        android:layout_below="@+id/scrollView"/>

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="324dp"
        android:layout_below="@+id/usePersonalData"
        android:layout_alignEnd="@+id/exitButton"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="-204dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/savebuttonsunny"
        android:contentDescription="@string/saveButton" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="324dp"
        android:layout_below="@+id/usePersonalData"
        android:layout_marginTop="13dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/takeBackButton"
        android:src="@drawable/gobacksunny" />

</RelativeLayout>