<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybase"
    android:id="@+id/datacollect">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/inputDetailsTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- First Name Input -->
    <EditText
        android:id="@+id/FName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:gravity="center"
        android:background="@drawable/popup_round_moody"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/SName"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintWidth_percent="0.45" />

    <!-- Surname Input -->
    <EditText
        android:id="@+id/SName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:gravity="center"
        android:background="@drawable/popup_round_moody"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/FName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintWidth_percent="0.45" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/PNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:gravity="center"
        android:background="@drawable/popup_round_moody"
        app:layout_constraintTop_toBottomOf="@id/FName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Address Input -->
    <EditText
        android:id="@+id/Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:gravity="center"
        android:background="@drawable/popup_round_moody"
        app:layout_constraintTop_toBottomOf="@id/PNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Robot Image -->

    <!-- Go Back Button -->

    <!-- Save Button -->

    <ImageView
        android:id="@+id/workingHard2"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Address"
        app:srcCompat="@drawable/detailsbotmoody" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/takeBackButton"
        android:scaleType="fitCenter"
        android:src="@drawable/gobackmoody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workingHard2"
        app:layout_constraintWidth_percent="0.45" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/saveButton"
        android:scaleType="fitCenter"
        android:src="@drawable/savebuttonmoody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@id/exitButton"
        app:layout_constraintTop_toBottomOf="@id/workingHard2"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>