<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybase"
    android:id="@+id/loginpage">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loginPageTitle"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Robot Image -->
    <ImageView
        android:id="@+id/loginbot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/loginbotsunny"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.3"
        android:layout_marginTop="16dp" />
    <ImageButton
        android:id="@+id/daniButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/button_for_lead_digital_artist"
        android:src="@drawable/danimini"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Username Input -->
    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_round_sunny"
        android:gravity="center"
        android:hint="@string/Username"
        app:layout_constraintTop_toBottomOf="@id/loginbot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_round_sunny"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Create User Button -->

    <!-- Login Button -->

    <ImageButton
        android:id="@+id/takeToCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/createUserButton"
        android:scaleType="fitCenter"
        android:src="@drawable/createusersunny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintWidth_percent="0.45" />

    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/loginButton"
        android:scaleType="fitCenter"
        android:src="@drawable/savebuttonsunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toEndOf="@id/takeToCreate"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>