<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greybase"
    android:id="@+id/settings">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settingsPageTitle"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Spinner -->
    <Spinner
        android:id="@+id/stylePalette"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/popup_round_sunny"
        android:prompt="@string/style_palette_prompt"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginEnd="8dp" />

    <!-- Permissions Switch -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/permissions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/permissionsSwitch"
        app:layout_constraintTop_toBottomOf="@id/stylePalette"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="8dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="16dp" />


    <!-- Robot Image -->

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/logoutbutton"
        android:padding="12dp"
        android:text="@string/log_out"
        android:textColor="@color/buttongrey"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/stylePalette"
        app:layout_constraintWidth_percent="0.45"  />

    <ImageView
        android:id="@+id/workingHard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/detailsbotsunny"
        app:layout_constraintTop_toBottomOf="@id/permissions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="16dp" />

    <!-- Exit Button -->

    <!-- Save Button -->
    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/takeBackButton"
        android:scaleType="fitCenter"
        android:src="@drawable/gobacksunny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workingHard"
        app:layout_constraintWidth_percent="0.45" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/saveButton"
        android:scaleType="fitCenter"
        android:src="@drawable/savebuttonsunny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@id/exitButton"
        app:layout_constraintTop_toBottomOf="@id/workingHard"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>
